--- a/_Variables.scss
+++ b/_Variables.scss
@@ -23,6 +23,11 @@ $atnaHost-blue: #64abe9;
 $atnaHost-orange: #f58232;
 /*-------------ATNA HOST-----------------*/
 
+/*--------------OUTLET----------------------*/
+$fourStepsBoxGradient: (#fbfbfb, white);
+$fourStepsBoxShadow: 0px 0px 21px rgba(0, 0, 0,.24);
+/*--------------OUTLET----------------------*/
+
 /*-------------FOOOTER-------------------*/
 $footerBackground: #444444;
 $footerOrangeLine: #FF7A18;
