--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@
   background-color: $greyMain-background;
   .topBar {
     background-color: $themeBlue;
-    padding: 10px 25px;
+    padding: 5px 25px;
     padding-right: $sideMenuLength + 15px;
     color: $headerWhiteText;
 
@@ -69,7 +69,7 @@
       gap: 20px;
       .wrap {
         @include flex(c, c);
-        gap: 4px;
+        gap: 10px;
         .fa-envelope,
         .fa-phone {
           font-size: 19px;
@@ -82,12 +82,16 @@
       }
     }
     .center {
-      gap: 25px;
+      gap: 15px;
       > * {
-        font-size: 19px;
+        font-size: 17px;
+        color: white;
+        padding: 5px;
       }
     }
     .left {
+      color: white;
+      font-weight: bold;
       .siteGearIcon {
         width: 49px;
         height: 29px;
@@ -138,10 +142,12 @@
         z-index: 0;
       }
       .buttons {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        @include flex(c, s, column);
         gap: 20px;
+        padding: 1px 0;
+        text-align: center;
+        font-size: 14px;
+        line-height: 22px;
       }
     }
     .header {
@@ -159,6 +165,9 @@
           justify-content: flex-end;
           align-items: center;
           gap: 10px;
+          &:hover span {
+            text-shadow: $SHADOW;
+          }
           > .img {
             width: 33px;
             height: 33px;
@@ -187,6 +196,7 @@
             color: $themeBlue;
             font-weight: bold;
             font-size: 13px;
+            transition: 0.2s;
           }
         }
       }
@@ -358,7 +368,7 @@
   background-color: $greyMain-background;
   color: $atnaHost-blue;
   font-weight: bold;
-  font-size: 31px;
+  font-size: 35px;
   > span {
     color: $atnaHost-orange;
     padding-right: 10px;
@@ -382,15 +392,15 @@
       .pic {
         background: url("./images/img/Asset\ 3-8.png") no-repeat;
         background-size: 100%;
-        @include scalePics(288px, 205px, 2.1);
+        @include scalePics(288px, 205px, 2);
         position: relative;
         .text {
-          width: 100%;
+          width: 200px;
           font-weight: bold;
           position: absolute;
           right: 90px;
-          bottom: 15px;
-          font-size: 16px;
+          bottom: 20px;
+          font-size: 19px;
           color: $themeBlue;
         }
       }
@@ -398,58 +408,83 @@
     .flex {
       @include flex(c, c);
       gap: 85px;
-      .box {
+      .boxWrapper {
+        padding: 2px;
         border-radius: 20px;
-        position: relative;
-        box-shadow: $slider-shadow;
-        @include cube(200px);
-        .colored {
-          color: white;
-          position: absolute;
-          top: -5px;
-          left: 0;
-          right: 0;
-          text-align: center;
-          margin: 0 auto;
-          width: 150px;
-          padding: 10px 0;
-          $polygon-offset: 15%;
-          clip-path: polygon(
-            0 0,
-            100% 0,
-            100-$polygon-offset 100%,
-            $polygon-offset 100%
-          );
-          .step {
-            font-size: 15px;
-            font-weight: bold;
-            &::before {
-              margin-left: 10px;
-              font-size: 17px;
-            }
-          }
-        }
-        .text {
-          position: absolute;
-          bottom: 25px;
-          text-align: center;
-          left: 0;
-          right: 0;
-          font-weight: bold;
-          font-size: 15px;
-        }
-        $colors: #ffd413, #ff9b0f, #fe3061, #02aeba;
-        @for $index from 1 through length($colors) {
-          $item: nth($colors, $index);
-          &.box#{$index} {
-            & .colored {
-              background-color: $item;
-              & .step::before {
-                content: "#{$index}";
+        background: linear-gradient(to left, $fourStepsBoxGradient);
+        box-shadow: $fourStepsBoxShadow;
+        .box {
+          background: linear-gradient(to right, $fourStepsBoxGradient);
+          border-radius: 20px;
+          position: relative;
+          @include cube(220px);
+          .coloredWrapper {
+            $coloredWidth: 160px;
+            $coloredWrapperSize: 5px;
+            background-color: rgb(255, 255, 255);
+            position: absolute;
+            top: -12px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            $polygon-offset: 15%;
+            width: $coloredWidth + $coloredWrapperSize * 3;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: $coloredWrapperSize 0;
+            clip-path: polygon(
+              0 0,
+              100% 0,
+              100-$polygon-offset 100%,
+              $polygon-offset 100%
+            );
+            .colored {
+              color: white;
+
+              text-align: center;
+              width: $coloredWidth;
+              padding: 10px 0;
+              clip-path: polygon(
+                0 0,
+                100% 0,
+                100-$polygon-offset 100%,
+                $polygon-offset 100%
+              );
+              .step {
+                font-size: 18px;
+                font-weight: bold;
+                &::before {
+                  margin-left: 9px;
+                  font-size: 24px;
+                  position: relative;
+                  top: 2px;
+                }
               }
             }
-            .text {
-              color: $item;
+          }
+          .text {
+            position: absolute;
+            bottom: 40px;
+            text-align: center;
+            left: 0;
+            right: 0;
+            font-weight: bold;
+            font-size: 20px;
+          }
+          $colors: #ffd413, #ff9b0f, #fe3061, #02aeba;
+          @for $index from 1 through length($colors) {
+            $item: nth($colors, $index);
+            &.box#{$index} {
+              & .colored {
+                background-color: $item;
+                & .step::before {
+                  content: "#{$index}";
+                }
+              }
+              .text {
+                color: $item;
+              }
             }
           }
         }
@@ -846,3 +881,5 @@
     }
   }
 }
+
+/*----------STYLE EDIT------------------*/
