--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,12 @@
 @import "./Variables";
+@import "./Fonts";
+body {
+  font-family: iranSansnormal;
+}
 /*--------General--------------*/
 .pillButton {
   color: $themeBlue;
-  font-family: dark-sans;
+  font-family: iranSansnormal;
   background-color: white;
   border-radius: 15px;
   border: none;
@@ -32,7 +36,7 @@
   border-radius: 24px;
   border: none;
   background-color: $coolOrange;
-  font-family: dark-sans;
+  font-family: iranSansnormal;
   box-shadow: $SHADOW;
   width: 133px;
   font-size: 18pt / $fontScale;
@@ -174,11 +178,15 @@
           &:hover span {
             text-shadow: $SHADOW;
           }
+          &:hover .img {
+            filter: drop-shadow($SHADOW);
+          }
           > .img {
             width: 33px;
             height: 33px;
             background: url("./images/img/Header-Footer.png");
             background-size: 1380%;
+            transition: .2s;
             &.one {
               background-position: -202px -4px;
             }
@@ -194,7 +202,8 @@
               background-size: 1624%;
             }
             &.four {
-              background-position: -135.5px 34px;
+              width: 34px;
+              background-position: -139.5px 34px;
               background-size: 1325%;
             }
           }
@@ -216,7 +225,7 @@
           padding: 5px 20px;
           text-indent: 20px;
           font-family: inherit;
-          width: 220px;
+          width: 270px;
           &:focus {
             outline: none;
           }
@@ -306,8 +315,9 @@
       > h2 {
         text-align: center;
         color: $themePurple;
-        font-size: 16px;
+        font-size: 18px;
         margin: 0;
+        font-family: iranSansBlack;
       }
     }
     .navBar {
@@ -360,7 +370,9 @@
         width: 150px;
         text-align: center;
         padding-bottom: 20px;
-        line-height: 24px;
+        line-height: 23px;
+        font-family: 'iranSansmedium';
+        width: 58%;
       }
     }
   }
@@ -378,6 +390,7 @@
   > span {
     color: $atnaHost-orange;
     padding-right: 10px;
+    font-family: iranSansmedium;
   }
   &::before,
   &::after {
@@ -590,7 +603,7 @@
         width: 250px;
         background-color: $footerEmailInputBackground;
         box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.419);
-        font-family: Dark-sans;
+        font-family: iranSansnormal;
         font-size: 20pt / $fontScale;
         color: $footerEmailInputColor;
 
@@ -638,6 +651,7 @@
       p.title {
         font-size: 25pt / $fontScale;
         letter-spacing: letterSpace(100) * 1px;
+        font-family: iranSanslight;
       }
 
       p.address {
@@ -647,11 +661,16 @@
       p.site {
         font-size: 25pt / $fontScale;
         letter-spacing: letterSpace(100) * 1px;
+        font-family: iranSanslight;
+
       }
+
 
       p.num {
         font-size: 20pt / $fontScale;
         letter-spacing: letterSpace(50) * 1px;
+        font-family: iranSanslight;
+
       }
     }
   }
@@ -691,7 +710,7 @@
         color: $footerWhiteText;
         font-size: 20pt / $fontScale;
         text-shadow: $SHADOW;
-        letter-spacing: letterSpace(50) * 1px;
+        letter-spacing: letterSpace(25) * 1px;
       }
     }
   }
