--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,21 @@ body {
     background-position: -5px -9px;
     background-size: 678%;
   }
+  .orangeButton {
+    font-size: 15px;
+    height: 33px;
+    box-sizing: border-box !important;
+    padding: 0;
+    padding-right: 25px;
+    &.alt {
+      color: $themeBlue;
+      font-weight: bold;
+      box-shadow: none;
+      &:hover {
+        box-shadow: $SHADOW;
+      }
+    }
+  }
 }
 
 .orangeButton {
@@ -41,13 +56,7 @@ body {
   width: 133px;
   font-size: 18pt / $fontScale;
   font-weight: bold;
-  &.bt {
-    color: $themeBlue;
-    font-weight: bold;
-  }
-  &.pr {
-    padding-right: 16px;
-  }
+  transition: 0.2s;
 }
 /*--------General--------------*/
 
@@ -186,7 +195,7 @@ body {
             height: 33px;
             background: url("./images/img/Header-Footer.png");
             background-size: 1380%;
-            transition: .2s;
+            transition: 0.2s;
             &.one {
               background-position: -202px -4px;
             }
@@ -371,7 +380,7 @@ body {
         text-align: center;
         padding-bottom: 20px;
         line-height: 23px;
-        font-family: 'iranSansmedium';
+        font-family: "iranSansmedium";
         width: 58%;
       }
     }
@@ -433,6 +442,7 @@ body {
         background: linear-gradient(to left, $fourStepsBoxGradient);
         box-shadow: $fourStepsBoxShadow;
         .box {
+          padding: 60px 15px;
           background: linear-gradient(to right, $fourStepsBoxGradient);
           border-radius: 20px;
           position: relative;
@@ -490,6 +500,15 @@ body {
             right: 0;
             font-weight: bold;
             font-size: 20px;
+          }
+          .hover {
+            font-family: iranSansBold;
+            line-height: 19px;
+            text-align: justify;
+            display: none;
+          }
+          &:hover .hover {
+            display: block;
           }
           $colors: #ffd413, #ff9b0f, #fe3061, #02aeba;
           @for $index from 1 through length($colors) {
@@ -662,15 +681,12 @@ body {
         font-size: 25pt / $fontScale;
         letter-spacing: letterSpace(100) * 1px;
         font-family: iranSanslight;
-
       }
-
 
       p.num {
         font-size: 20pt / $fontScale;
         letter-spacing: letterSpace(50) * 1px;
         font-family: iranSanslight;
-
       }
     }
   }
