--- a/style.scss
+++ b/style.scss
@@ -430,6 +430,12 @@ body {
               font-size: 13px;
               font-family: "iranSanslight";
               padding: 3px 15px;
+              position: relative;
+              &::after {
+                content:attr(data-count);
+                position: absolute;
+                left: 10px;
+              }
             }
           }
         }
